<resources>
    <string name="app_name">NutriCare</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Bersantap, Bersenang, Bersama Nusa Spot</string>
    <!--    <string name="login">Login</string>-->
    <string name="forgot_password">Lupa Password ?</string>
    <!--    <string name="register">Daftar Akun</string>-->
    <string name="no_acount">Tidak Punya Akun ?</string>


    <string name="otp_verify">Verifikasi OTP</string>
    <string name="verifikasi_otp">Masukka Kode Verivikasi OTP!</string>
    <string name="tidak_menerima_otp">Tidak menerima OTP?</string>
    <string name="kirim_ulang_otp">Kirim Ulang OTP</string>
    <string name="title_activity_bottom_nav">bottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_deteksi">Deteksi</string>
    <string name="title_ahli_gizi">Ahli Gizi</string>
    <string name="title_user">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id" />
    <string name="user_id">id</string>
    <string name="detect">Detect</string>
    <string name="image_description" />


    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Tidak punya akun? Daftar Akun</string>
    <string name="login_signin_hint">Sudah punya akun? Masuk</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="login">Selamat Datang!</string>
    <string name="logo_description">Logo</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="quotes" />
    <string name="login_guest">Login Guest</string>


</resources>