<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/ll_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            style="@style/loginHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Daftar Akun" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputName"
            style="@style/parent"

            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <EditText
                android:id="@+id/name"
                android:layout_width="334dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_bg"
                android:drawablePadding="0dp"
                android:hint="@string/login_name_hint"
                android:padding="8dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputMobile"
            style="@style/parent"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="334dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_bg"
                android:drawablePadding="0dp"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:padding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <EditText
                android:id="@+id/edtPwd"
                android:layout_width="334dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_bg"
                android:drawablePadding="0dp"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:padding="8dp" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <EditText
                android:id="@+id/edtPwdConf"
                android:layout_width="334dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_bg"
                android:drawablePadding="0dp"
                android:hint="@string/konfirmasi_password"
                android:inputType="textEmailAddress"
                android:padding="8dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            style="@style/loginButton"
            android:layout_width="334dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="DAFTAR" />


        <TextView
            android:id="@+id/tv_login"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:gravity="center"
            android:text="@string/login_signin_hint"
            android:textColor="@color/colorPrimary" />


    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo3"
        android:layout_marginTop="30dp"
        android:layout_below="@id/ll_register"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo_description"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <View
        android:id="@+id/darkBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99292929"
        android:visibility="gone" />

</RelativeLayout>